# sanitize_cli

./: LICENSE  README.md  pyproject.toml
src/sanitize_cli/: cli.py
