[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sanitize-comments-cli"
version = "0.2.0" 
authors = [
  { name="Your Name / Pseudonym", email="you@example.com" },
]
description = "CLI tool to remove comments from source files using tokenization (More Robust)."
readme = "README.md"
requires-python = ">=3.8" 
license = { file="LICENSE" }
keywords = ["cli", "comments", "code", "cleanup", "developer-tools", "utility", "tokenizer", "pygments"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]

dependencies = [
    "pygments>=2.9.0", 
]

[project.urls]
Homepage = "https://github.com/rohinish404/sanitize_cli" 
Repository = "https://github.com/rohinish404/sanitize_cli" 

[project.scripts]
sanitize = "sanitize_cli.cli:main"
